--- a/10.03/style.css
+++ b/10.03/style.css
@@ -3,6 +3,7 @@
     height: 500px;
     background-color: aqua;
     margin: 0 auto;
+    margin-top: 70px;
 
 }
 .btn{
@@ -37,6 +38,9 @@
 
 #minute{
     margin-left: 10px;
+    margin-right: 10px;
+}
+#second{
     margin-right: 10px;
 }
 
